Fix: Tooltip font-size and getting cut off by body element

--- a/amberdata-example-gas-station/styles.css
+++ b/amberdata-example-gas-station/styles.css
@@ -21,6 +21,7 @@ body {
     margin: 0;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     background: #f9f9f9f9;
+    min-height: 100vh;
 }
 
 a {
@@ -161,6 +162,8 @@ p {
     padding: 5px 0;
     border-radius: 6px;
 
+    font-size: 14px;
+
     /* Position the tooltip text */
     position: absolute;
     z-index: 1;
@@ -176,11 +179,6 @@ p {
 .details {
     display: inline-block;
     border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
-}
-
-/* Tooltip text */
-#gas-percentiles .bar .details-bubble {
-
 }
 
 /* Tooltip arrow */
